css style files added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@1,700&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet"/>
         <title>My Portfolio</title>
+        <link rel="stylesheet" href="main.css">
         <script src="https://kit.fontawesome.com/ee8942593a.js" crossorigin="anonymous"></script>
     </head>
     <body id="home">
